[package]
name = "file-sync-client-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3"]
